[tool.poetry]
name = "better-test-tool"
version = "0.7.5"
description = "Tool for easy testing"
authors = ["Ihor Peresunko"]
license = "MIT"
exclude = [
    "demo.gif",
    "file-fixtures/**",
    ".gitignore",
]

[tool.poetry.scripts]
btt = 'better_test_tool.cli:cli'

[tool.poetry.dependencies]
python = "^2.7"
click = "^7.0"
pyperclip = "^1.7"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
bpython = "^0.18.0"
isort = "^4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
